fix. dashs alignment

--- a/src/componentes/infoCampo/infoCampo.scss
+++ b/src/componentes/infoCampo/infoCampo.scss
@@ -128,6 +128,8 @@ h6{
   border-radius: 0.5rem;
   background-color: white;
   margin: 1%;
+  margin-left: 1rem !important;
+  margin-right: 1rem !important;
 }
 
 .diagnostico-wrapper{
